email service, kv assets for react build

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,14 @@
 name = "waiver-system"
-main = "src/index.js"
-compatibility_date = "2024-01-01"
+main = "worker.js"
+compatibility_date = "2024-09-23"
 
 compatibility_flags = ["nodejs_compat"]
 
-browser = { binding = "BROWSER" }
+[browser]
+binding = "BROWSER"
 
+[[send_email]]
+name = "SEND_EMAIL"
 
 [[r2_buckets]]
 binding = "PDF_STORAGE"
@@ -20,6 +23,10 @@ database_id = "9af8c837-9326-4723-9a5c-f048870aed7e"
 binding = "CONFIG"
 id = "839815e215af46048bc18e3c886756f0"
 
+[[kv_namespaces]]
+binding = "ASSETS"
+id = "fa78fe4ba2f940d981f01ae62d593420"
+
 [vars]
-EMAIL_FROM = "waivers@resend.dev"
+EMAIL_FROM = "noreply@workers.dev"
 LEGAL_VERSION = "v1.0"
