--- a/package.json
+++ b/package.json
@@ -7,20 +7,22 @@
     "build": "vite build",
     "preview": "vite preview",
     "test-pdf": "node test-pdf.js",
-    "upload-assets": "wrangler r2 object put waiver-pdfs/assets/index.html --file dist/index.html && wrangler r2 object put waiver-pdfs/assets/assets/index.css --file dist/assets/index.css && wrangler r2 object put waiver-pdfs/assets/assets/index.js --file dist/assets/index.js",
-    "deploy": "npm run build && npm run upload-assets && wrangler deploy"
+    "upload-assets": "wrangler kv key put index.html --binding ASSETS --path dist/index.html && wrangler kv key put assets/index.css --binding ASSETS --path dist/assets/index.css && wrangler kv key put assets/index.js --binding ASSETS --path dist/assets/index.js",
+    "upload-assets-remote": "wrangler kv key put index.html --remote --binding ASSETS --path dist/index.html && wrangler kv key put assets/index.css --remote --binding ASSETS --path dist/assets/index.css && wrangler kv key put assets/index.js --remote --binding ASSETS --path dist/assets/index.js",
+    "deploy": "npm run build && npm run upload-assets-remote && wrangler deploy",
+    "wrangler-dev": "npm run build && npm run upload-assets && wrangler dev"
   },
   "dependencies": {
+    "mimetext": "^3.0.27",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "resend": "^6.1.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@cloudflare/puppeteer": "^1.0.4",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.4.0",
+    "vite": "^7.1.8",
     "wrangler": "^4.40.3"
   }
 }
