--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test-pdf": "node test-pdf.js",
-    "upload-assets": "wrangler kv key put index.html --binding ASSETS --path dist/index.html && wrangler kv key put assets/index.css --binding ASSETS --path dist/assets/index.css && wrangler kv key put assets/index.js --binding ASSETS --path dist/assets/index.js",
-    "upload-assets-remote": "wrangler kv key put index.html --remote --binding ASSETS --path dist/index.html && wrangler kv key put assets/index.css --remote --binding ASSETS --path dist/assets/index.css && wrangler kv key put assets/index.js --remote --binding ASSETS --path dist/assets/index.js",
-    "deploy": "npm run build && npm run upload-assets-remote && wrangler deploy",
-    "wrangler-dev": "npm run build && npm run upload-assets && wrangler dev"
+    "test:pdf": "node test-pdf.js",
+    "db:init:local": "npx wrangler d1 execute DB --file=schema.sql",
+    "db:init:remote": "npx wrangler d1 execute DB --file=schema.sql --remote",
+    "wrangler:deploy": "npm run build && wrangler deploy",
+    "wrangler:dev": "npm run build && wrangler dev"
   },
   "dependencies": {
     "mimetext": "^3.0.27",
