--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "waiver-system",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=24.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
