--- a/wrangler.toml
+++ b/wrangler.toml
@@ -24,4 +24,4 @@ database_id = "9af8c837-9326-4723-9a5c-f048870aed7e"
 
 [vars]
 EMAIL_FROM = "noreply@waiver-system.bm-burhan22.workers.dev"
-LEGAL_VERSION = "v1.0"
+VERSION = "1.0"
