--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "node": ">=24.0.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "npm run db:migrate:local && npm run build && wrangler dev",
     "build": "vite build",
     "preview": "vite preview",
     "test:pdf": "node test-pdf.js",
-    "db:init:local": "npx wrangler d1 execute DB --file=schema.sql",
-    "db:init:remote": "npx wrangler d1 execute DB --file=schema.sql --remote",
-    "wrangler:deploy": "npm run build && wrangler deploy",
-    "wrangler:dev": "npm run build && wrangler dev"
+    "db:migrate:local": "npx wrangler d1 migrations apply DB --local",
+    "db:migrate:remote": "npx wrangler d1 migrations apply DB --remote",
+    "db:migrations:list": "npx wrangler d1 migrations list DB --remote",
+    "db:migrations:create": "npx wrangler d1 migrations create DB",
+    "deploy": "npm run db:migrate:remote && npm run build && wrangler deploy"
   },
   "dependencies": {
     "mimetext": "^3.0.27",
