--- a/wrangler.toml
+++ b/wrangler.toml
@@ -18,6 +18,7 @@ bucket_name = "waiver-pdfs"
 binding = "DB"
 database_name = "waiver-db"
 database_id = "9af8c837-9326-4723-9a5c-f048870aed7e"
+migrations_dir = "migrations"
 
 [vars]
 VERSION = "1.0"
