--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "node": ">=24.0.0"
   },
   "scripts": {
-    "dev": "npm run db:migrate:local && npm run build && wrangler dev",
-    "build": "vite build",
+    "dev": "wrangler dev",
+    "build": "npm run db:migrate:remote && vite build",
+    "build:local": "npm run db:migrate:local && vite build",
+    "deploy": "wrangler deploy",
     "preview": "vite preview",
     "test:pdf": "node test-pdf.js",
     "db:migrate:local": "npx wrangler d1 migrations apply DB --local",
     "db:migrate:remote": "npx wrangler d1 migrations apply DB --remote",
     "db:migrations:list": "npx wrangler d1 migrations list DB --remote",
-    "db:migrations:create": "npx wrangler d1 migrations create DB",
-    "deploy": "npm run db:migrate:remote && npm run build && wrangler deploy"
+    "db:migrations:create": "npx wrangler d1 migrations create DB"
   },
   "dependencies": {
     "mimetext": "^3.0.27",
